--- a/Trabalho01/nbproject/private/private.properties
+++ b/Trabalho01/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/luskas/snap/netbeans/common/data/11.0/build.properties
+user.properties.file=C:\\Users\\erick\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
